fix blank logo on footer

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
     <footer>
       <div class="footer-top-content">
         <div class="logo-footer">
-          <img src="/assets/img/logo.png" alt="Norest FC" />
+          <img src="/assets/img/norest-fc.png" alt="Norest FC" />
           <div>
             <h2>Norest FC</h2>
             <p>Norest Stadium</p>
